# KB_3-oop-mirea

./: CMakeLists.txt  README.md  c_b.cpp  c_b.h  cl_application.cpp  cl_application.h  main.cpp
classes/: c_2.cpp  c_2.h  c_3.cpp  c_3.h  c_4.cpp  c_4.h  c_5.cpp  c_5.h  c_6.cpp  c_6.h
