cmake_minimum_required(VERSION 3.26)
project(KV3_OOP)

set(CMAKE_CXX_STANDARD 17)

add_executable(KV3_OOP main.cpp
        c_b.cpp
        c_b.h
        cl_application.cpp
        cl_application.h
        classes/c_2.cpp
        classes/c_2.h
        classes/c_3.cpp
        classes/c_3.h
        classes/c_4.cpp
        classes/c_4.h
        classes/c_5.cpp
        classes/c_5.h
        classes/c_6.cpp
        classes/c_6.h
        classes/c_2.h
)
